testdata/baselines/reference/submodule/conformance/moduleExportWithExportPropertyAssignment4.errors.txt
a.js(6,6): error TS2339: Property 'justProperty' does not exist on type '{ (): void; justExport: number; bothBefore: number; bothAfter: number; }'.
mod1.js(2,1): error TS2323: Cannot redeclare exported variable 'bothBefore'.
mod1.js(4,1): error TS2323: Cannot redeclare exported variable 'bothBefore'.
mod1.js(5,1): error TS2323: Cannot redeclare exported variable 'bothAfter'.
mod1.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
mod1.js(8,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
mod1.js(10,1): error TS2323: Cannot redeclare exported variable 'bothAfter'.


==== a.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1.justExport.toFixed()
    mod1.bothBefore.toFixed() // error
    mod1.bothAfter.toFixed()
    mod1.justProperty.length
         ~~~~~~~~~~~~
!!! error TS2339: Property 'justProperty' does not exist on type '{ (): void; justExport: number; bothBefore: number; bothAfter: number; }'.
    
==== requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== mod1.js (6 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports.bothBefore = 'string'
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'bothBefore'.
    A.justExport = 4
    A.bothBefore = 2
    ~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'bothBefore'.
    A.bothAfter = 3
    ~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'bothAfter'.
    module.exports = A
    ~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    function A() {
        this.p = 1
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    module.exports.bothAfter = 'string'
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'bothAfter'.
    module.exports.justProperty = 'string'
    